@@ -1,5 +1,12 @@
 2007-04-24  Mukund Sivaraman  <muks@mukund.org>
 
+	* plug-ins/common/tiff.c: added support to load multi-page TIFF
+	images as single layered image or multiple individual per-page
+	images, after prompting the user for choice using a
+	GimpPageSelector widget. Fixes the rest of bug #138495.
+
+2007-04-24  Mukund Sivaraman  <muks@mukund.org>
+
 	* libgimpwidgets/gimppageselector.c: updated the API documentation
 	to indicate that the returned array is sorted.
 
